# geany-faenza-icon

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  faenza-use-geany-icon.sh
