iconsdir = @iconsdir@

nobase_dist_icons_DATA = \
  Faenza/apps/16/geany.png \
  Faenza/apps/22/geany.png \
  Faenza/apps/24/geany.png \
  Faenza/apps/32/geany.png \
  Faenza/apps/48/geany.png \
  Faenza/apps/64/geany.png \
  Faenza/apps/96/geany.png \
  Faenza/apps/scalable/geany.svg

dist_noinst_SCRIPTS = \
  faenza-use-geany-icon.sh
